[package]
name = "huo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
candle-core = "0.3.2"
prettyplease = "0.2.15"
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = "2.0.43"
